fix: fixed wrong colors and sizes

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -166,4 +166,12 @@
   .header__utilities__links__dark {
     color: black;
   }
+
+  .header__utilities__button__light {
+    background-color: white;
+  }
+
+  .header__utilities__button__dark {
+    background-color: white;
+  }
 }
