--- a/src/sass/_pages.scss
+++ b/src/sass/_pages.scss
@@ -1,10 +1,30 @@
 @import 'notfound';
 @import 'about';
 @import 'projects';
+@import 'config';
 
 .home__content {
   display: 'flex';
   flex: 1;
   flex-direction: 'column';
   background-color: lighten($secondary-color-light, 3%);
+}
+
+%contacts__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.contacts__container__dark {
+  @extend %contacts__container;
+  background-color: $primary-color-dark;
+}
+
+.contacts__container__light {
+  @extend %contacts__container;
+  background-color: $primary-color-light;
 }
